...
    setupUI()
    
    filteredPokemons = pokemons
  }
  
  fileprivate func setupUI() {
    self.title = "Pokedex Go"
    
    definesPresentationContext = true
    
    searchBar
      .rx.text
      .throttle(0.5, scheduler: MainScheduler.instance)
...
